# organizr-tab-controller

./: .dockerignore  .gitignore  Dockerfile  README.md  index.yaml  organizr-tab-controller-0.0.1.tgz  pyproject.toml  requirements.txt
.github/workflows/: README.md  docker-publish.yml  helm-publish.yml  release-notes.yml  release-on-merge.yml
docker/: Dockerfile  README.md
docs/: CI-CD.md
helm/: Chart.yaml  README.md  values.yaml
src/organizr_tab_controller/: __init__.py  __main__.py  config.py  controller.py  icon_matcher.py  k8s_watcher.py  models.py  organizr_client.py  tab_reconciler.py
tests/: test_controller.py  test_icon_matcher.py  test_organizr_client.py  test_tab_reconciler.py
